--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=employee-management-service
 server.port=8383
+spring.datasource.url= jdbc:postgresql://127.0.0.1:5432/employeeDB
+spring.datasource.username = capitalone
+spring.datasource.password = admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.datasource.driverClassName=org.postgresql.Driver
